--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
@@ -16,7 +16,7 @@
         <h1 class="logo">Design Responsivo</h1>
         <nav class="menu-principal">
             <button class="menu-principal__btn">
-                Abrir e fechar menu - teste
+                Abrir e fechar menu - teste mode
             </button>
             <ul class="menu-principal__lista">
                 <a class="menu-principal__item menu-principal__item--atual" href="index.html">
