segunda att da manhã

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
@@ -40,7 +40,10 @@
               <p class="cabecalho-home__subtitulo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum cumque </p>
               <a class="cabecalho-home_role" href="#servicos">Role para ver mais</a>
           </header>
-          <section id="servicos" class="servicos"><!--Seção de serviços-->
+<!--Seção de serviços-->
+          <section id="servicos" class="servicos">
+
+           <!-- <div class="container">-->
               <h2 class="home__titulo">O que fazemos</h2>
               <section class="servico__item">
                   <img src="img/icone-desenvolvimento-web.png" alt="icone planeta terra">
@@ -57,9 +60,12 @@
                   <h3>Café</h3>
                   <p class="servicos__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, eum doloribus! Velit non esse quaerat quo officiis id voluptate dolorum. Doloribus voluptatum </p>
               </section>
+            <!--</div>-->
+
           </section><!--Fim Seção Serviços-->
 
           <section class="depoimentos cnc"><!--Seção Depoimentos-->
+            <div class="container">
                 <h2 class="home__titulo home__titulo--branco">O que falam de nós</h2>
                 <section class="depoimentos__item">
                     <img class="depoimentos__img" src="imagens/img/depoimentos/pessoa-1.jpg" alt="foto da pessoa">
@@ -68,6 +74,7 @@
                     </p>
                     <p class="depoimentos__pessoa">Nome da pessoa - cargo</p>
                 </section>
+            </div>
           </section><!--Fim Seção Depoimentos-->
 
     </main>
