--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header class="cabecalho">
+        <div class="container"><!--Inicio container-->
         <h1 class="logo">Design Responsivo</h1>
         <nav class="menu-principal">
             <button class="menu-principal__btn">
@@ -33,6 +34,7 @@
                 </a>
             </ul>
         </nav>
+    </div><!--Fim container-->
     </header>
     <main>             
           <header class="cabecalho-home cnc">
@@ -41,9 +43,9 @@
               <a class="cabecalho-home_role" href="#servicos">Role para ver mais</a>
           </header>
 <!--Seção de serviços-->
-          <section id="servicos" class="servicos">
 
-           <!-- <div class="container">-->
+          <section id="servicos" class="servicos">
+           <div class="container"><!--Inicio container-->
               <h2 class="home__titulo">O que fazemos</h2>
               <section class="servico__item">
                   <img src="img/icone-desenvolvimento-web.png" alt="icone planeta terra">
@@ -60,12 +62,11 @@
                   <h3>Café</h3>
                   <p class="servicos__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, eum doloribus! Velit non esse quaerat quo officiis id voluptate dolorum. Doloribus voluptatum </p>
               </section>
-            <!--</div>-->
-
+            </div><!--Fim container-->
           </section><!--Fim Seção Serviços-->
 
           <section class="depoimentos cnc"><!--Seção Depoimentos-->
-            <div class="container">
+            <div class="container"><!--Inicio container-->
                 <h2 class="home__titulo home__titulo--branco">O que falam de nós</h2>
                 <section class="depoimentos__item">
                     <img class="depoimentos__img" src="imagens/img/depoimentos/pessoa-1.jpg" alt="foto da pessoa">
@@ -74,12 +75,14 @@
                     </p>
                     <p class="depoimentos__pessoa">Nome da pessoa - cargo</p>
                 </section>
-            </div>
+            </div><!--Fim container-->
           </section><!--Fim Seção Depoimentos-->
 
     </main>
     <footer class="rodape cnc">
+       
         <div class="rodape__linha-1">
+            <div class="container"><!--Inicio container-->
                 <div class="rodape_coluna">
                     <a href="index.html" class="logo logo--branco">Design Responsivo</a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur </p>
@@ -105,6 +108,7 @@
                         </ul>
                 </div>
         </div>
+        </div><!--fim container-->
          <div class="rodape__linha-2 cnc">
              &copy; Todos direitos reservados
          </div>
