--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header class="cabecalho ">
+        <div class="container"><!--Inicio container-->
         <h1 class="logo">Design Responsivo</h1>
         <nav class="menu-principal">
             <button class="menu-principal__btn">
@@ -32,6 +33,7 @@
                 </a>
             </ul>
         </nav>
+        </div><!--Fim container-->
     </header>
     <main>
 
@@ -40,17 +42,20 @@
                 <h1 class="pagina-cabecalho__titulo">Sobre nos</h1>
             </header>
             <section class="pagina-conteudo">
+                <div class="container"><!--Inicio container-->
                 <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quibusdam soluta.</p>
                 <img src="img/sobre.jpg" alt="mesa de trabalho com colegas se cumprimentando">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ducimus, voluptatibus optio illum suscipit repellendus aliquid ullam aliquam dolor perspiciatis eos et voluptatem veniam ea unde quos cupiditate animi fuga!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti distinctio, sequi enim minima, reprehenderit error sed quae repellendus, qui architecto tempora consequatur suscipit necessitatibus porro! Distinctio unde animi error possimus?</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae rerum est obcaecati dolorem magnam suscipit dolores, impedit architecto praesentium quasi aliquid id vel, repellat deserunt facilis possimus voluptates voluptatum minima.</p>
+            </div><!--Fim container-->
             </section>
         </aritcle>
 
     </main>
     <footer class="rodape cnc">
         <div class="rodape__linha-1">
+            <div class="container"><!--Inicio container-->
                 <div class="rodape_coluna">
                     <a href="index.html" class="logo logo--branco">Design Responsivo</a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur </p>
@@ -75,6 +80,7 @@
                         
                         </ul>
                 </div>
+                </div><!--fim container-->
         </div>
          <div class="rodape__linha-2">
              &copy; Todos direitos reservados
