--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
@@ -14,7 +14,7 @@
     <header class="cabecalho ">
         <div class="container"><!--Inicio container-->
         <h1 class="logo">Design Responsivo</h1>
-        <nav class="menu-principal">
+        <nav class="menu-principal menu-principal--fechado">
             <button class="menu-principal__btn">
                 Abrir e fechar menu
             </button>
