--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
@@ -51,17 +51,17 @@
               <h2 class="home__titulo">O que fazemos</h2>
               <section class="servico__item">
                   <img src="img/icone-desenvolvimento-web.png" alt="icone planeta terra">
-                  <h3>Desenvolvimento Web</h3>
+                  <h3 class="titulo__servicos">Desenvolvimento Web</h3>
                   <p class="servicos__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut eum saepe ex perferendis deserunt sapiente nulla eos excepturi vitae. Nam rerum qui dicta? .</p>
               </section>
               <section class="servico__item">
                   <img src="img/icone-carrinho.png" alt="carrinho de loja">
-                  <h3>E-commerce</h3>
+                  <h3 class="titulo__servicos">E-commerce</h3>
                   <p class="servicos__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae explicabo, omnis quis similique, iste quo vel corrupti eos nemo necessitatibus cumque sequi. </p>
               </section>
               <section class="servico__item">
                   <img src="img/icone-cafe.png" alt="copo de café">
-                  <h3>Café</h3>
+                  <h3 class="titulo__servicos">Café</h3>
                   <p class="servicos__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, eum doloribus! Velit non esse quaerat quo officiis id voluptate dolorum. Doloribus voluptatum </p>
               </section>
             </div><!--Fim container-->
