sabado de manha

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
@@ -87,7 +87,7 @@
             <div class="container"><!--Inicio container-->
                 <div class="rodape_coluna">
                     <a href="index.html" class="logo logo--branco">Design Responsivo</a>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur </p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur </p>
                 </div>
                     <div class="rodape_coluna">
                         <h2 class="rodape_titulo">Social</h2>
