--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
@@ -40,7 +40,7 @@
             <section class="pagina-conteudo">
                 <div class="container"><!--Inicio container-->
                 <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quibusdam soluta.</p>
-                <img src="img/sobre.jpg" alt="mesa de trabalho com colegas se cumprimentando">
+                <img class="img-left" src="img/sobre.jpg" alt="mesa de trabalho com colegas se cumprimentando">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ducimus, voluptatibus optio illum suscipit repellendus aliquid ullam aliquam dolor perspiciatis eos et voluptatem veniam ea unde quos cupiditate animi fuga!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti distinctio, sequi enim minima, reprehenderit error sed quae repellendus, qui architecto tempora consequatur suscipit necessitatibus porro! Distinctio unde animi error possimus?</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae rerum est obcaecati dolorem magnam suscipit dolores, impedit architecto praesentium quasi aliquid id vel, repellat deserunt facilis possimus voluptates voluptatum minima.</p>
