--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
@@ -51,7 +51,7 @@
     </main>
     <footer class="rodape cnc">
         <div class="rodape__linha-1">
-            <div class="container"><!--Inicio container-->
+            <div class="container pagina-conteudo-2"><!--Inicio container-->
                 <div class="rodape_coluna">
                     <a href="index.html" class="logo logo--branco">Design Responsivo</a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur </p>
