--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
@@ -38,12 +38,13 @@
                 <h1 class="pagina-cabecalho__titulo">Sobre nos</h1>
             </header>
             <section class="pagina-conteudo">
-                <div class="container"><!--Inicio container-->
+                <div class="container pagina-conteudo-2"><!--Inicio container-->
                 <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quibusdam soluta.</p>
                 <img class="img-left" src="img/sobre.jpg" alt="mesa de trabalho com colegas se cumprimentando">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ducimus, voluptatibus optio illum suscipit repellendus aliquid ullam aliquam dolor perspiciatis eos et voluptatem veniam ea unde quos cupiditate animi fuga!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti distinctio, sequi enim minima, reprehenderit error sed quae repellendus, qui architecto tempora consequatur suscipit necessitatibus porro! Distinctio unde animi error possimus?</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae rerum est obcaecati dolorem magnam suscipit dolores, impedit architecto praesentium quasi aliquid id vel, repellat deserunt facilis possimus voluptates voluptatum minima.</p>
+                <p class="par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ducimus, voluptatibus optio illum suscipit repellendus aliquid ullam aliquam dolor perspiciatis eos et voluptatem veniam ea unde quos cupiditate animi fuga!</p>
+                
+                <p class="par">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti distinctio, sequi enim minima, reprehenderit error sed quae repellendus, qui architecto tempora consequatur suscipit necessitatibus porro! Distinctio unde animi error possimus?</p>
+                <p class="par">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae rerum est obcaecati dolorem magnam suscipit dolores, impedit architecto praesentium quasi aliquid id vel, repellat deserunt facilis possimus voluptates voluptatum minima.</p>
             </div><!--Fim container-->
             </section>
         </aritcle>
@@ -51,7 +52,7 @@
     </main>
     <footer class="rodape cnc">
         <div class="rodape__linha-1">
-            <div class="container pagina-conteudo-2"><!--Inicio container-->
+            <div class="container"><!--Inicio container-->
                 <div class="rodape_coluna">
                     <a href="index.html" class="logo logo--branco">Design Responsivo</a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur </p>
