ultima att de sab

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/contato.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/contato.html
@@ -10,7 +10,7 @@
     
     <title>Document</title>
 </head>
-<body class="pag_contato">
+<body class="pag_contato ">
     <header class="cabecalho">
         <div class="container"><!--Inicio container-->
         <h1 class="logo">Design Responsivo</h1>
@@ -36,18 +36,19 @@
         <article>
             <header class="pagina-cabecalho">
                 <div class="container"><!--Inicio container-->
+                   
                 <h1 class="pagina-cabecalho__titulo">contato</h1>
                 </div>
             </header>
             <section>
-                <div class="container"><!--Inicio container-->
+                <div class="container  pagina-contato"><!--Inicio container-->
                 <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ducimus, porro et at corrupti esse,</p>
                 <form class="formulario" action="">
-                    <div class="formulario_grupo">
+                    <div class="formulario_grupo formulario_grupo--esq">
                         <label class="formulario_label" for="nome">Nome </label>
                         <input class="formulario_campo" id="nome" type="text">
                     </div>
-                    <div class="formulario_grupo">
+                    <div class="formulario_grupo formulario_grupo--dir">
                         <label class="formulario_label" for="email">Email </label>
                         <input class="formulario_campo" id="email" type="email"><br>
                     </div>
