primeira att de segunda

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sobre.html
@@ -39,7 +39,7 @@
             </header>
             <section class="pagina-conteudo">
                 <div class="container pagina-conteudo-2"><!--Inicio container-->
-                <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quibusdam soluta.</p>
+                <p class="pagina-conteudo_subtitulo text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quibusdam soluta.</p>
                 <img class="img-left" src="img/sobre.jpg" alt="mesa de trabalho com colegas se cumprimentando">
                 <p class="par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ducimus, voluptatibus optio illum suscipit repellendus aliquid ullam aliquam dolor perspiciatis eos et voluptatem veniam ea unde quos cupiditate animi fuga!</p>
                 
