--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/portfolio.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/portfolio.html
@@ -39,7 +39,7 @@
             </header>
                 <section class="pagina-conteudo">
                     <div class="container"><!--Inicio container-->
-                    <p class="text-center">         Lorem ipsum, dolor sit amet consectetur adipisicing<br> elitb Maxime, error asperiores deserunt quam assumenda cupiditate <br> a laboriosam eveniet fugiat? Tenetur consequatur
+                    <p class="pagina-conteudo_subtitulo text-center">         Lorem ipsum, dolor sit amet consectetur adipisicing<br> elitb Maxime, error asperiores deserunt quam assumenda cupiditate <br> a laboriosam eveniet fugiat? Tenetur consequatur
                     </p>
                     <nav>
                         <ul class="lista-trabalhos">
