--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/portfolio.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/portfolio.html
@@ -37,8 +37,8 @@
             <header class="pagina-cabecalho">
                 <h1 class="pagina-cabecalho__titulo"> Portifólio</h1>
             </header>
-                <section class="pagina-conteudo">
-                    <div class="container"><!--Inicio container-->
+                <section class="pagina-portifolio">
+                    <div class="ccontainer"><!--Inicio container-->
                     <p class="pagina-conteudo_subtitulo text-center">         Lorem ipsum, dolor sit amet consectetur adipisicing<br> elitb Maxime, error asperiores deserunt quam assumenda cupiditate <br> a laboriosam eveniet fugiat? Tenetur consequatur
                     </p>
                     <nav>
