primeira tentativa de animar o menu

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
@@ -118,6 +118,16 @@
     </footer>
 
    <script>
+
+
+
+       var menu = document.querySelector('.menu-principal--fechado')
+       menu.addEventListener('click', clicar)
+
+       function clicar(){     
+           menu.className = 'menu-principal menu-principal--fechad'
+           console.log(menu)
+       }
        /*
        function scrollTo(element){
         document.querySelector(element).scrollIntoView({behavior: "smooth"});
