--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/portfolio.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/portfolio.html
@@ -121,5 +121,8 @@
          </div>
         
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="codigo.js"></script>
 </body>
 </html>
