--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
@@ -70,13 +70,33 @@
           <section class="depoimentos cnc"><!--Seção Depoimentos-->
             <div class="container"><!--Inicio container-->
                 <h2 class="home__titulo home__titulo--branco">O que falam de nós</h2>
-                <section class="depoimentos__item">
-                    <img class="depoimentos__img" src="imagens/img/depoimentos/pessoa-1.jpg" alt="foto da pessoa">
-                    <p class="depoimentos__texto">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione officiis ipsam praesentium distinctio nihil voluptates quos, excepturi quisquam sapiente
-                    </p>
-                    <p class="depoimentos__pessoa">Nome da pessoa - cargo</p>
-                </section>
+
+                    <div class="depoimentos__caixa">
+                        <section class="depoimentos__item">
+                            <img class="depoimentos__img" src="imagens/img/depoimentos/pessoa-1.jpg" alt="foto da pessoa">
+                            <p class="depoimentos__texto">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione officiis ipsam praesentium distinctio nihil voluptates quos, excepturi quisquam sapiente
+                            </p>
+                            <p class="depoimentos__pessoa">Nome da pessoa - cargo</p>
+                        </section>
+
+                        <section class="depoimentos__item">
+                            <img class="depoimentos__img" src="imagens/img/depoimentos/pessoa-1.jpg" alt="foto da pessoa">
+                            <p class="depoimentos__texto">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione officiis ipsam praesentium distinctio nihil voluptates quos, excepturi quisquam sapiente
+                            </p>
+                            <p class="depoimentos__pessoa">Nome da pessoa - cargo</p>
+                        </section>
+
+                        <section class="depoimentos__item">
+                            <img class="depoimentos__img" src="imagens/img/depoimentos/pessoa-1.jpg" alt="foto da pessoa">
+                            <p class="depoimentos__texto">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione officiis ipsam praesentium distinctio nihil voluptates quos, excepturi quisquam sapiente
+                            </p>
+                            <p class="depoimentos__pessoa">Nome da pessoa - cargo</p>
+                        </section>
+
+                    </div>
             </div><!--Fim container-->
           </section><!--Fim Seção Depoimentos-->
 
@@ -117,8 +137,9 @@
         
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="slick.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>   
+    <script src="slick.min.js"></script> 
     <script src="codigo.js"></script>
+   
 </body>
 </html>
