mais insersão sobre o slide

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/index.html
@@ -83,7 +83,7 @@
                         <section class="depoimentos__item">
                             <img class="depoimentos__img" src="imagens/img/depoimentos/pessoa-1.jpg" alt="foto da pessoa">
                             <p class="depoimentos__texto">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione officiis ipsam praesentium distinctio nihil voluptates quos, excepturi quisquam sapiente
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                             </p>
                             <p class="depoimentos__pessoa">Nome da pessoa - cargo</p>
                         </section>
