--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/portfolio.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/portfolio.html
@@ -44,37 +44,37 @@
                     <nav>
                         <ul class="lista-trabalhos">
                             <li class="lista-trabalhos__item">
-                                <a href="img/portfolio/aircraft-2806035_1280.jpg">
+                                <a data-fancybox="gallery" href="img/portfolio/aircraft-2806035_1280.jpg">
                                     <img class="lista-trabalhos__img" src="img/portfolio/miniaturas/aircraft-2806035_min.jpg" alt="aviao">
                                     <h2 class="lista-trabalhos__titulos">Nome do trabalho Aviao</h2>
                                 </a>
                             </li>
                             <li class="lista-trabalhos__item">
-                                <a href="img/portfolio/gear-2291916_1280.jpg">
+                                <a data-fancybox="gallery" href="img/portfolio/gear-2291916_1280.jpg">
                                     <img class="lista-trabalhos__img" src="img/portfolio/miniaturas/gear-2291916_min.jpg" alt="engrenagem">
                                     <h2 class="lista-trabalhos__titulos">Nome do trabalho Gear</h2>
                                 </a>
                             </li>
                             <li class="lista-trabalhos__item">
-                                <a href="img/portfolio/hong-kong-1990268_1280.jpg">
+                                <a data-fancybox="gallery" href="img/portfolio/hong-kong-1990268_1280.jpg">
                                     <img class="lista-trabalhos__img" src="img/portfolio/miniaturas/hong-kong-1990268_min.jpg" alt="honkong">
                                     <h2 class="lista-trabalhos__titulos">Nome do trabalho Honkong</h2>
                                 </a>
                             </li>
                             <li class="lista-trabalhos__item">
-                                <a href="img/portfolio/landscape-2268775_1280.jpg">
+                                <a data-fancybox="gallery" href="img/portfolio/landscape-2268775_1280.jpg">
                                     <img class="lista-trabalhos__img" src="img/portfolio/miniaturas/landscape-2268775_min.jpg" alt="landscape">
                                     <h2 class="lista-trabalhos__titulos">Nome do trabalho land</h2>
                                 </a>
                             </li>
                             <li class="lista-trabalhos__item">
-                                <a href="img/portfolio/saddle-2614038_1280.jpg">
+                                <a data-fancybox="gallery" href="img/portfolio/saddle-2614038_1280.jpg">
                                     <img class="lista-trabalhos__img" src="img/portfolio/miniaturas/saddle-2614038_min.jpg" alt="saddle">
                                     <h2 class="lista-trabalhos__titulos">Nome do trabalho saddle</h2>
                                 </a>
                             </li>
                             <li class="lista-trabalhos__item">
-                                <a href="img/portfolio/town-2430571_1920.jpg">
+                                <a data-fancybox="gallery" href="img/portfolio/town-2430571_1920.jpg">
                                     <img class="lista-trabalhos__img" src="img/portfolio/miniaturas/town-2430571_min.jpg" alt="town">
                                     <h2 class="lista-trabalhos__titulos">Nome do trabalho town</h2>
                                 </a>
@@ -124,6 +124,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>   
     <script src="slick.min.js"></script> 
+    <script src="js/jquery.fancybox.min.js"></script>
     <script src="codigo.js"></script>
 </body>
 </html>
