--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/contato.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/contato.html
@@ -110,6 +110,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>   
     <script src="slick.min.js"></script> 
+    <!--<script src="js/jquery.validate.min.js"></script>-->
     <script src="codigo.js"></script>
+    
+   
 </body>
 </html>
