--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/contato.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/contato.html
@@ -50,13 +50,13 @@
                     </div>
                     <div class="formulario_grupo formulario_grupo--dir">
                         <label class="formulario_label" for="email">Email </label>
-                        <input class="formulario_campo" id="email" type="email"><br>
+                        <input class="formulario_campo" id="email" type="email" name="name_email"><br>
                     </div>
                     <div class="formulario_grupo">
                         <label class="formulario_label" for="">Mensagem <br></label>
-                        <textarea class="formulario_campo" name="" id="" cols="30" rows="10"></textarea><br>
+                        <textarea class="formulario_campo" name="areadetexto" id="" cols="30" rows="10"></textarea><br>
                     </div>
-                    <input class="formulario_botao" type="submit" name="Enviar" id="">
+                    <input class="formulario_botao" type="submit" name="Enviar" id="Enviar">
                 </form>
                 <div>
                     <p class="text-center">
@@ -110,7 +110,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>   
     <script src="slick.min.js"></script> 
-    <!--<script src="js/jquery.validate.min.js"></script>-->
+    <script src="js/jquery.validate.min.js"></script>
     <script src="codigo.js"></script>
     
    
