validação do form

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/contato.html
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/contato.html
@@ -46,7 +46,7 @@
                 <form class="formulario" action="">
                     <div class="formulario_grupo formulario_grupo--esq">
                         <label class="formulario_label" for="nome">Nome </label>
-                        <input class="formulario_campo" id="nome" type="text">
+                        <input class="formulario_campo" id="nome" type="text" name="name_nome">
                     </div>
                     <div class="formulario_grupo formulario_grupo--dir">
                         <label class="formulario_label" for="email">Email </label>
